--- a/src/components/extras/Card.astro
+++ b/src/components/extras/Card.astro
@@ -1,5 +1,5 @@
 ---
-import { FileBadge } from "lucide-astro";
+import { FileBadge, CalendarClock } from "lucide-astro";
 
 interface Props {
   slug: string;
@@ -11,34 +11,38 @@ const { slug, title, horas } = Astro.props;
 ---
 
 <li
-  class="rounded-md shadow-lg hover:shadow-lg transition-shadow duration-300 col-span-1"
+  class="col-span-1 shadow-lg hover:shadow-lg rounded-md transition-shadow duration-300"
 >
   <a
     href={`/cursos/${slug}`}
-    class="list-row p-0 rounded-md h-18 lg:h-32 bg-white"
+    class="bg-white p-0 rounded-md h-18 lg:h-32 list-row"
   >
     <div>
       <img
-        class="w-24 lg:w-40 object-cover h-18 lg:h-32 rounded-bl-md rounded-tl-md"
+        class="rounded-tl-md rounded-bl-md w-24 lg:w-40 h-18 lg:h-32 object-cover"
         src={`https://cenakin.cl/images/cursos/${slug}/mini.webp`}
         alt={title}
       />
     </div>
-    <div class="py-2 pr-2 flex flex-col justify-between">
-      <div class="lg:text-2xl leading-tight font-bold title line-clamp-2">
+    <div class="flex flex-col justify-around py-2 pr-2">
+      <div class="font-bold lg:text-2xl line-clamp-2 leading-tight title">
         {title}
       </div>
-      <div class="flex flex-col gap-1 mt-2">
-        <div class="flex items-center text-xs h-4">
-          <FileBadge
-            color="oklch(58% 0.158 241.966)"
-            size="14"
-            class="mr-1"
-          />Curso Certificado
+      <div class="flex gap-1 mt-2">
+        <div
+          class="flex items-center bg-sky-100 rounded-md text-sky-700 text-xs badge"
+        >
+          <FileBadge color="oklch(58% 0.158 241.966)" size="14" />Curso
+          Certificado
         </div>
-        <div>
-          {horas}
-        </div>
+        {
+          horas && (
+            <div class="flex items-center bg-sky-100 rounded-md text-sky-700 text-xs badge">
+              <CalendarClock color="oklch(58% 0.158 241.966)" size="14" />
+              {horas} horas
+            </div>
+          )
+        }
       </div>
     </div>
   </a>
