--- a/src/pages/cursos/[slug].astro
+++ b/src/pages/cursos/[slug].astro
@@ -25,15 +25,6 @@ interface Props {
   curso: any;
 }
 
-const moneda = (valor) => {
-  const formatterPeso = new Intl.NumberFormat("es-CL", {
-    style: "currency",
-    currency: "CLP",
-    minimumFractionDigits: 0,
-  });
-  return formatterPeso.format(valor);
-};
-
 const curso = Astro.props.curso;
 
 const seo: Seo = {
@@ -51,9 +42,9 @@ const seo: Seo = {
 >
   <Container>
     <Cabecera titulo={curso.name} slug={curso.slug} id={curso.id} />
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 my-8">
+    <div class="gap-4 grid grid-cols-1 lg:grid-cols-3 my-8">
       <div class="col-span-1 lg:col-span-2">
-        <div class="grid grid-cols-1 gap-4">
+        <div class="gap-4 grid grid-cols-1">
           <Introduccion texto={curso.description} />
           <Info />
           <FeDoCu
@@ -76,9 +67,9 @@ const seo: Seo = {
           />
         </div>
       </div>
-      <aside class="col-span-1 sticky top-0">
+      <aside class="top-0 sticky col-span-1">
         <DatosContacto />
-        <div id="stick">
+        <div class="stick">
           <ReservaPrecio
             precio={curso.regular_price}
             descuento={curso.sale_price}
@@ -92,7 +83,7 @@ const seo: Seo = {
 </Layout>
 
 <style>
-  #stick {
+  .stick {
     position: sticky;
     top: 20px;
   }
