--- a/src/components/categorias/Masoterapia.astro
+++ b/src/components/categorias/Masoterapia.astro
@@ -13,7 +13,6 @@ const deportivos = filtro(45);
 const esteticos = filtro(44);
 const diplomados = filtro(32);
 const inicio = filtro(29);
-const complementaria = filtro(46);
 
 const categorias = [
   {
@@ -39,8 +38,8 @@ const categorias = [
 ];
 ---
 
-<div class="mb-20 lg:mb-0">
-  <h2 class="mt-8 mb-2 font-bold text-lg lg:text-2xl uppercase">
+<div class="lg:mb-0">
+  <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
     Diplomados en masoterapía
   </h2>
   <div>
@@ -59,7 +58,7 @@ const categorias = [
     </ul>
   </div>
 
-  <h2 class="mt-8 mb-2 font-bold text-lg lg:text-2xl uppercase">
+  <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
     Cursos de Masajes
   </h2>
   <div>
@@ -78,7 +77,7 @@ const categorias = [
     </ul>
   </div>
 
-  <h2 class="mt-8 mb-2 font-bold text-lg lg:text-2xl uppercase">
+  <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
     Cursos de masajes deportivos
   </h2>
   <div>
@@ -97,7 +96,7 @@ const categorias = [
     </ul>
   </div>
 
-  <h2 class="mt-8 mb-2 font-bold text-lg lg:text-2xl uppercase">
+  <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
     Cursos de masajes estéticos
   </h2>
   <div>
@@ -116,7 +115,7 @@ const categorias = [
     </ul>
   </div>
 
-  <h2 class="mt-8 mb-2 font-bold text-lg lg:text-2xl uppercase">
+  <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
     Cursos de masajes holísticos
   </h2>
   <div>
