--- a/src/components/extras/Card.astro
+++ b/src/components/extras/Card.astro
@@ -28,16 +28,16 @@ const { slug, title, horas } = Astro.props;
       <div class="font-bold lg:text-2xl line-clamp-2 leading-tight title">
         {title}
       </div>
-      <div class="flex gap-1 mt-2">
+      <div class="flex gap-1 lg:mt-2">
         <div
-          class="flex items-center bg-sky-100 rounded-md text-sky-700 text-xs badge"
+          class="flex items-center bg-sky-100 rounded-md text-[10px] text-sky-700 lg:text-xs badge"
         >
           <FileBadge color="oklch(58% 0.158 241.966)" size="14" />Curso
           Certificado
         </div>
         {
           horas && (
-            <div class="flex items-center bg-sky-100 rounded-md text-sky-700 text-xs badge">
+            <div class="flex items-center bg-sky-100 rounded-md text-[10px] text-sky-700 lg:text-xs badge">
               <CalendarClock color="oklch(58% 0.158 241.966)" size="14" />
               {horas} horas
             </div>
