--- a/src/components/icons/Whatsapp.astro
+++ b/src/components/icons/Whatsapp.astro
@@ -3,8 +3,8 @@
     xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
-    fill="currentColor"
-    class="bi bi-whatsapp"
+    fill="white"
+    class="bg-green-600 rounded-full bi bi-whatsapp"
     viewBox="0 0 16 16"
     ><path
       d="M13.601 2.326A7.85 7.85 0 0
