--- a/src/pages/categorias/index.astro
+++ b/src/pages/categorias/index.astro
@@ -28,7 +28,7 @@ const seo: Seo = {
         {
           salud && salud.length > 0 && (
             <div class="mt-10">
-              <h2 class="mt-8 mb-2 font-bold text-lg lg:text-2xl uppercase">
+              <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
                 Área de la Salud
               </h2>
               <ul class="gap-4 grid grid-cols-1 lg:grid-cols-2 list">
@@ -50,7 +50,7 @@ const seo: Seo = {
         {
           marketing && marketing.length > 0 && (
             <div class="mt-10">
-              <h2 class="mt-8 mb-2 font-bold text-lg lg:text-2xl uppercase">
+              <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
                 Área de la Marketing
               </h2>
               <ul class="gap-4 grid grid-cols-1 lg:grid-cols-2 list">
@@ -72,7 +72,7 @@ const seo: Seo = {
         {
           online && online.length > 0 && (
             <div class="mt-10">
-              <h2 class="mt-8 mb-2 font-bold text-lg lg:text-2xl uppercase">
+              <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
                 Área de Cursos Online
               </h2>
               <ul class="gap-4 grid grid-cols-1 lg:grid-cols-2 list">
