--- a/src/components/cursos/ReservaPrecio.astro
+++ b/src/components/cursos/ReservaPrecio.astro
@@ -40,28 +40,28 @@ const fechaFormateada = (fecha) => {
 };
 ---
 
-<div class="stats stats-vertical lg:stats-horizontal grid grid-cols-1 gap-4">
-  <div class="stat col-span-1">
+<div class="gap-4 grid grid-cols-1 stats stats-vertical lg:stats-horizontal">
+  <div class="col-span-1 stat">
     <div class="stat-title">Valores y Formas de pago</div>
     <h4 class="font-bold text-2xl">
-      Arancel Total <span class="line-through font-light text-md"
+      Arancel Total <span class="font-light text-md line-through"
         >{descuento == 0 ? "" : moneda(precio)}</span
       >
 
-      <p class="text-sm font-light">
+      <p class="font-light text-sm">
         {
           descuento == 0
             ? ""
             : `Arancel con descuento. Válido hasta el ${fechaFormateada(fecha)}`
         }
       </p>
-      <div class="stat-value text-sky-600 text-4xl text-center lg:p-6 py-6">
+      <div class="lg:p-6 py-6 text-sky-600 text-4xl text-center stat-value">
         {descuento == 0 ? moneda(precio) : moneda(descuento)} CLP
       </div>
       <div class="hidden md:flex">
         <button
           id="compra2"
-          class="btn rounded-md rounded-md bg-sky-600 text-white py-6 uppercase w-full"
+          class="bg-sky-600 py-6 rounded-md w-full text-white uppercase btn"
           aria-data-id={id}
         >
           Inscríbete aquí
