--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,7 @@ const { title, description, url, image, keywords } = Astro.props
   </body>
 </html>
 
-<style>
+<style is:global>
   body {
     display: flex;
     flex-direction: column;
