--- a/src/components/cursos/InObj.astro
+++ b/src/components/cursos/InObj.astro
@@ -6,12 +6,12 @@ interface Props {
 const { incluye, objetivos } = Astro.props;
 ---
 
-<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+<div class="gap-4 grid grid-cols-1 md:grid-cols-2">
   {
     incluye && (
-      <div class="card rounded-md bg-base-100 shadow-sm col-span-1">
-        <div class="card-body prose">
-          <h3 class="text-xl font-bold text-sky-600 ">Incluye</h3>
+      <div class="col-span-1 bg-base-100 shadow-md rounded-md card">
+        <div class="max-w-full card-body prose">
+          <h3 class="mb-1 font-bold text-sky-600 text-4xl">Incluye</h3>
           <div set:html={incluye} />
         </div>
       </div>
@@ -19,9 +19,9 @@ const { incluye, objetivos } = Astro.props;
   }
   {
     objetivos && (
-      <div class="card rounded-md bg-base-100 shadow-sm col-span-1">
-        <div class="card-body prose">
-          <h3 class="text-xl font-bold text-sky-600">Objetivos</h3>
+      <div class="col-span-1 bg-base-100 shadow-md rounded-md card">
+        <div class="max-w-full card-body prose">
+          <h3 class="mb-1 font-bold text-sky-600 text-4xl">Objetivos</h3>
           <div set:html={objetivos} />
         </div>
       </div>
