--- a/src/components/cursos/Introduccion.astro
+++ b/src/components/cursos/Introduccion.astro
@@ -2,6 +2,17 @@
 const { texto } = Astro.props;
 ---
 
-<div class="card rounded-md bg-base-100 shadow-sm">
-  <div class="card-body prose max-w-full" set:html={texto} />
+<div class="bg-base-100 shadow-md rounded-md card" id="introcurso">
+  <div class="max-w-full card-body prose" set:html={texto} />
 </div>
+
+<style>
+  #introcurso {
+    h2 {
+      margin-top: 0 !important;
+    }
+    p {
+      margin: 0 !important;
+    }
+  }
+</style>
