--- a/src/components/cursos/RePlan.astro
+++ b/src/components/cursos/RePlan.astro
@@ -2,12 +2,12 @@
 const { requisitos, plan } = Astro.props;
 ---
 
-<div class="grid grid-cols-1 gap-4">
+<div class="gap-4 grid grid-cols-1" id="replan">
   {
     requisitos && (
-      <div class="card rounded-md bg-base-100 shadow-sm">
-        <div class="card-body prose max-w-full">
-          <h3 class="text-xl font-bold text-sky-600">Requisitos</h3>
+      <div class="bg-base-100 shadow-md rounded-md card">
+        <div class="max-w-full card-body prose">
+          <h3 class="mb-1 font-bold text-sky-600 text-4xl">Requisitos</h3>
           <div set:html={requisitos} />
         </div>
       </div>
@@ -15,12 +15,21 @@ const { requisitos, plan } = Astro.props;
   }
   {
     plan && (
-      <div class="card rounded-md bg-base-100 shadow-sm">
-        <div class="card-body prose max-w-full">
-          <h3 class="text-xl font-bold text-sky-600">Plan de Estudios</h3>
+      <div class="bg-base-100 shadow-md rounded-md card">
+        <div class="max-w-full card-body prose">
+          <h3 class="mb-1 font-bold text-sky-600 text-4xl">Plan de Estudios</h3>
           <div set:html={plan} />
         </div>
       </div>
     )
   }
 </div>
+
+<style>
+  #replan {
+    h4 {
+      font-size: 1.5rem;
+      margin-top: 20px !important;
+    }
+  }
+</style>
