--- a/src/components/extras/Card.astro
+++ b/src/components/extras/Card.astro
@@ -11,7 +11,7 @@ const { slug, title, horas } = Astro.props;
 ---
 
 <li
-  class="col-span-1 shadow-lg hover:shadow-lg rounded-md transition-shadow duration-300"
+  class="col-span-1 hover:shadow-lg border border-gray-100 rounded-md transition-shadow duration-300"
 >
   <a
     href={`/cursos/${slug}`}
