--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import type { Seo } from "@interfaces/Seo";
 
 import Cabecera from "@components/inicio/Cabecera.astro";
 import Formaciones from "@components/inicio/Formaciones.astro";
-import Marquesina from "@components/extras/Marquesina.astro";
+import Aviso from "@components/extras/Aviso.astro";
 import Faq from "@components/extras/Faq.astro";
 import Contacto from "@components/extras/Contacto.astro";
 import Info from "@components/extras/Info.astro";
@@ -25,3 +25,4 @@ const seo: Seo = {
   <Faq />
   <Contacto />
 </Layout>
+<Aviso />
