--- a/src/components/categorias/Masoterapia.astro
+++ b/src/components/categorias/Masoterapia.astro
@@ -16,7 +16,7 @@ const inicio = filtro(29);
 
 const categorias = [
   {
-    title: "Diplomados en masoterapía",
+    title: "Diplomados en masoterapia",
     cat: diplomados,
   },
   {
