--- a/src/components/inicio/Cabecera.astro
+++ b/src/components/inicio/Cabecera.astro
@@ -1,4 +1,4 @@
-<div id="cabecera__portada">
+<div id="cabecera__portada" class="flex justify-center">
   <picture>
     <source
       srcset="https://cenakin.cl/images/portada/1_1264.webp"
