--- a/src/components/extras/Info.astro
+++ b/src/components/extras/Info.astro
@@ -4,9 +4,9 @@ import Container from "@layouts/Container.astro";
 
 <Container>
   <div class="py-24" id="info">
-    <h2 class="text-5xl font-bold mb-4">Nuestras Certificaciones</h2>
+    <h2 class="mb-4 font-bold text-5xl">Nuestras Acreditaciones</h2>
     <div
-      class="flex flex-col md:flex-row gap-8 md:gap-32 items-center md:justify-center"
+      class="flex md:flex-row flex-col md:justify-center items-center gap-8 md:gap-32"
     >
       <div>
         <img
